--- a/x-wing/package.json
+++ b/x-wing/package.json
@@ -4,7 +4,7 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && cp -r src/index.html dist/",
+    "build": "tsc && cp -r src/*.html dist/",
     "start": "npm run build && electron ."
   },
   "keywords": [],
