feat: add ollama localhost

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-FALCON_RABBITMQ_URI=amqp://falcon:falcon@localhost:5672
 OPENAI_API_KEY=
+LLM_PROVIDER=gpt
+OLLAMA_MODEL=llama3
+RABBITMQ_URI=amqp://guest:guest@localhost:5672/
