--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
-# Hotkey listener
+# === Hotkey Listener ===
 pynput==1.7.6
 
-# Comunicação com RabbitMQ
+# === Comunicação com RabbitMQ ===
 pika==1.3.2
 
-# Leitura de variáveis de ambiente
+# === Leitura de Variáveis de Ambiente (.env) ===
 python-dotenv==1.0.1
 
-# Captura de tela
+# === Captura de Tela ===
 Pillow==10.3.0
 
-# Integração com OpenAI (imagem, áudio, texto)
+# === Integração com OpenAI (texto, imagem, áudio) ===
 openai>=1.0.0
 
-# Gravação de áudio
+# === Integração com API Local (ex: Ollama) ===
+requests==2.31.0
+
+# === Gravação e Manipulação de Áudio ===
 sounddevice==0.4.6
 numpy==1.26.4
 pydub==0.25.1
+
+# === Transcrição de Áudio com Whisper (local) ===
+faster-whisper==0.10.0
+
+# Recomendado: garantir que ffmpeg esteja instalado no sistema para manipulação de áudio (pydub)
