fix: refactor c3po

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
+RABBITMQ_URI=amqp://falcon:falcon@localhost:5672
 OPENAI_API_KEY=
 LLM_PROVIDER=gpt
-OLLAMA_MODEL=llama3
-RABBITMQ_URI=amqp://guest:guest@localhost:5672/
+OLLAMA_MODEL=gemma3:1b
+
+LEIA_TRANSCRIBE_PROVIDER=openai
+#LEIA_TRANSCRIBE_PROVIDER=local
+LEIA_OPENAI_API_KEY=
+
+
+C3PO_OPENAI_API_KEY=
+C3PO_OLLAMA_MODEL=gemma3:1b
+C3P0_LLM_PROVIDER=openai
